--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
     </properties>
 
     <dependencies>
+    <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.29</version> <!-- Use the latest version available -->
+</dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
